# PBEncoder

./: .gitignore  CMakeLists.txt  Encoder  INSTALL.sh  README.md
example/: pb1-cnf.cnf  pb1-wcnf.wcnf  pb1.pbf  pb1.wpbf  pb2-cnf.cnf  pb2.pbf
src/implement/: encoder.cpp  main.cpp  pbformula.cpp  util.cpp
src/interface/: encoder.hpp  main.hpp  pbformula.hpp  util.hpp
